--- a/package.json
+++ b/package.json
@@ -1,14 +1,27 @@
 {
-  "name": "note-taker",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.16.4"
-  }
+	"name": "note-basket",
+	"version": "1.0.0",
+	"description": "Keeps track of notes.",
+	"main": "server.js",
+	"scripts": {
+		"test": "jest",
+		"start": "node server.js"
+	},
+	"author": "Tim Scott",
+	"license": "MIT",
+	"dependencies": {
+		"express": "^4.16.4"
+	},
+	"devDependencies": {
+		"jest": "^26.6.3",
+		"nodemon": "^2.0.7"
+	},
+	"repository": {
+		"type": "git",
+		"url": "git+https://github.com/TheTiiiim/note-basket.git"
+	},
+	"bugs": {
+		"url": "https://github.com/TheTiiiim/note-basket/issues"
+	},
+	"homepage": "https://github.com/TheTiiiim/note-basket#readme"
 }
