--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
 	"author": "Tim Scott",
 	"license": "MIT",
 	"dependencies": {
-		"express": "^4.16.4"
+		"express": "^4.16.4",
+		"path": "^0.12.7",
+		"uuid": "^8.3.2"
 	},
 	"devDependencies": {
 		"jest": "^26.6.3",
